# controllers/usersControllers.js
@@ -6,12 +6,15 @@ import {
   updateUserSubscription,
   updateUserDetails,
   refreshTokens,
+  getTotalUsers,
+  verifyEmailService,
+  uploadAvatar,
+  requestPasswordResetService,
+  resetPasswordService
 } from "../services/userServices.js";
 import User from "../models/User.js";
-import fs from "fs/promises";
-import path from "path";
-import jimp from "jimp";
 import sgMail from "@sendgrid/mail";
+import jwt from "jsonwebtoken";
 
 export const register = async (req, res, next) => {
   try {
@@ -52,12 +55,11 @@ export const updateUser = async (req, res, next) => {
     }
     const sanitizedUser = {
       nickname: updatedUser.nickname,
-      email: updatedUser.email,
+      timezone: updatedUser.timezone,
       gender: updatedUser.gender,
       weight: updatedUser.weight,
       activeTime: updatedUser.activeTime,
       dailyWaterIntake: updatedUser.dailyWaterIntake,
-      avatarURL: updatedUser.avatarURL,
     };
     res.json({ message: "User updated", user: sanitizedUser });
   } catch (error) {
@@ -90,49 +92,28 @@ export const updateSubscription = async (req, res, next) => {
 };
 
 export const patchAvatar = async (req, res, next) => {
-  if (!req.file) {
-    return res.status(400).json({ message: "No file uploaded" });
-  }
-
   try {
-    // Process the image with Jimp
-    const image = await jimp.read(req.file.path);
-    await image.resize(250, 250).quality(60).writeAsync(req.file.path);
-
-    // Define new path for the processed image
-    const newPath = path.join("public", "avatars", req.file.filename); // Use path.join to create the file path
-
-    // Move file from tmp to public/avatars
-    await fs.rename(req.file.path, newPath);
-
-    // Update user's avatar URL in the database
-    const avatarURL = path.join("/avatars", req.file.filename); // Use path.join to create the URL path
-    await User.findByIdAndUpdate(req.user._id, { avatarURL });
-
-    // Send back the new avatar URL
+    const avatarURL = await uploadAvatar(req.user._id, req.file);
     res.status(200).json({ avatarURL });
   } catch (error) {
-    await fs.unlink(req.file.path); // Cleanup if something goes wrong
     next(error);
   }
 };
 
-export const verifyEmail = async (req, res) => {
+export const verifyEmail = async (req, res, next) => {
   try {
     const { verificationToken } = req.params;
-    const user = await User.findOneAndUpdate(
-      { verificationToken },
-      { $set: { verify: true, verificationToken: null } },
-      { new: true }
-    );
+    const { token, refreshToken } = await verifyEmailService(verificationToken);
 
-    if (!user) {
+    if (!token || !refreshToken) {
       return res.status(404).json({ message: "User not found" });
     }
 
-    res.status(200).json({ message: "Verification successful" });
+    // Redirect to frontend with tokens
+    const redirectUrl = `https://${process.env.FRONTEND_URL}/verify?token=${token}&refreshToken=${refreshToken}`;
+    res.redirect(redirectUrl);
   } catch (error) {
-    res.status(500).json({ message: error.message });
+    next(error);
   }
 };
 
@@ -165,20 +146,57 @@ export const resendVerificationEmail = async (req, res, next) => {
 
 export const refreshUserTokens = async (req, res, next) => {
   try {
-    const { token, refreshToken } = await refreshTokens(req.user, req.body.refreshToken);
+    const { refreshToken: providedRefreshToken } = req.body;
+    const decoded = jwt.verify(providedRefreshToken, process.env.JWT_REFRESH_SECRET);
+    const user = await User.findById(decoded.userId);
+
+    if (!user || user.refreshToken !== providedRefreshToken) {
+      return res.status(401).json({ message: "Invalid refresh token" });
+    }
+
+    const { token, refreshToken } = await refreshTokens(user, providedRefreshToken);
     res.json({ token, refreshToken });
   } catch (error) {
+    if (error instanceof jwt.JsonWebTokenError) {
+      return res.status(401).json({ message: "Invalid refresh token" });
+    }
     next(error);
   }
 };
 
 export const countUniqueUsers = async (req, res) => {
   try {
-    const uniqueUsersCount = await User.countDocuments();
-    res.json({ total: uniqueUsersCount });
+    const result = await getTotalUsers();
+    res.status(200).json(result);
   } catch (err) {
     console.error(err);
     res.status(500).json({ message: 'Server Error' });
   }
 };
 
+export const requestPasswordReset = async (req, res, next) => {
+  try {
+    const { email } = req.body;
+    await requestPasswordResetService(email, req.headers.host);
+    res.status(200).json({ message: "Password reset link sent" });
+  } catch (error) {
+    next(error);
+  }
+};
+
+export const resetPassword = async (req, res, next) => {
+  try {
+    const { token, newPassword } = req.body;
+    const resetSuccess = await resetPasswordService(token, newPassword);
+
+    if (resetSuccess) {
+      // Redirect to frontend with a success message
+      const redirectUrl = `http://${process.env.FRONTEND_URL}/password-reset-success`;
+      res.redirect(redirectUrl);
+    } else {
+      res.status(400).json({ message: "Invalid or expired token" });
+    }
+  } catch (error) {
+    next(error);
+  }
+};
